Update .gitignore to prevent future contamination from other projects
Added exclusions for directories that were accidentally committed:
- awesome-devops-mcp-servers, bubbles, bubbletea, cookiecutter-registry
- crush, genkit, lipgloss, mcp-go, opencode, soft-serve, toolhive, wish

Also added .genkit/ to ignore Genkit traces and development files.

These are separate projects that should not be part of Station repository.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,34 @@ docs/site/node_modules/
 
 # Crush framework
 .crush/
+
+# Genkit traces and data
+.genkit/
+
+# Prevent accidental inclusion of other projects from parent directory
+../awesome-devops-mcp-servers/
+../bubbles/
+../bubbletea/ 
+../cookiecutter-registry/
+../crush/
+../genkit/
+../lipgloss/
+../mcp-go/
+../opencode/
+../soft-serve/
+../toolhive/
+../wish/
+
+# Make sure we only include Station files
+awesome-devops-mcp-servers/
+bubbles/
+bubbletea/
+cookiecutter-registry/
+crush/
+genkit/
+lipgloss/
+mcp-go/
+opencode/
+soft-serve/
+toolhive/
+wish/
