🧹 MAJOR CLEANUP: Remove root-level pollution and fix repository structure
Removed from root:
- Documentation build artifacts: _astro/, en/, fonts/, registry/, sitemap files
- Misplaced subdirectories: station/, station-docs-new/, station-eng/
- Test artifacts: test-mcp-servers/, station_e2e_demo/
- Random build files: favicon.*, default-og-image.png, mermaid-init.js, etc.

Fixed:
- README logo path from ./image.png to ./station-logo.png
- Updated .gitignore to prevent future documentation build artifact pollution
- Proper project structure with clean root directory

The repository now has a clean, focused structure with:
- Core Station code: cmd/, internal/, pkg/
- Documentation: docs/ (with site source in docs/site/)
- Examples and tests in proper subdirectories
- Root level only contains essential project files

Documentation site source remains intact in docs/site/ for GitHub Pages deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,18 @@ docs/site/dist/
 docs/site/.astro/
 docs/site/node_modules/
 
+# Prevent documentation build artifacts in root
+/_astro/
+/en/
+/fonts/
+/registry/
+/sitemap*.xml
+/index.html
+/favicon.*
+/default-og-image.png
+/make-scrollable-code-focusable.js
+/mermaid-init.js
+
 # Crush framework
 .crush/
 
