fix: Remove Git LFS and all binary files from repository
- Remove .gitattributes that was automatically storing binaries in LFS
- Uninstall Git LFS completely from repository
- Remove all binary files (stn-ui, opencode-linux-amd64)
- Update .gitignore to prevent any future binary commits
- Repository should contain only source code, no binaries

Resolves Git LFS warnings and follows best practices:
- Build artifacts should be generated locally or in CI
- Binaries distributed via releases, not git storage

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Binaries for programs and plugins
+# Binaries for programs and plugins - NEVER commit binaries to git
 *.exe
 *.exe~
 *.dll
@@ -7,6 +7,19 @@
 station
 station-cli
 stn
+stn-ui
+stn-*
+station-*
+
+# All binaries and archives
+*.tar.gz
+*.zip
+*.deb
+*.rpm
+*.pkg
+*.dmg
+*.msi
+*.bin
 .genkit/
 .crush/
 # Test binary, built with `go test -c`
