docs: Add comprehensive Station documentation
- Add architecture.md: complete design goals, components, data flow, security model, and design decisions
- Add deployment-modes.md: comprehensive guide for stn up, stdio, serve, standalone, and Docker modes
- Add examples.md: 17KB of real-world agent examples for FinOps, Security, and Deployment use cases
- Fix .gitignore to allow docs/station/ directory (was being ignored)
- Update docs/station/README.md table of contents

Note: Stub files (installation, agent-development, mcp-tools, templates, bundles, zero-config-deployments, docker-compose-deployments) still need content.

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,13 @@
 *.dll
 *.so
 *.dylib
-station
+/station
 station-cli
 stn
 stn-ui
 stn-*
 station-*
+!docs/station/
 
 # All binaries and archives
 *.tar.gz
