--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,18 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.23'
+
+    - name: Build Station binary
+      run: |
+        # Build for both platforms
+        GOOS=linux GOARCH=amd64 go build -o dist/station_linux_amd64_v1/stn ./cmd/main
+        GOOS=linux GOARCH=arm64 go build -o dist/station_linux_arm64/stn ./cmd/main
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
