fix: Add missing test_helper.go and update gitignore pattern
- Add internal/db/test_helper.go to repository (was incorrectly ignored)
- Change test_*.go pattern to /test_*.go in .gitignore to only ignore root-level test files
- This fixes the "undefined: db.NewTest" error in golangci-lint CI runs
- Test helper provides NewTest() function for creating test database instances

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ station-mcp.json
 *-test.json
 
 # Test files (in root - move to tests/ for permanent tests)
-test_*.go
+/test_*.go
 test-*.sh
 test_*.sh
 
