fix: Enable default linters in golangci-lint config
golangci-lint v1.64.8 requires at least one linter to be enabled.
Changed from disable-all: true to explicitly enabling recommended linters:
- errcheck: Check for unchecked errors
- gosimple: Simplify code suggestions
- govet: Vet examines Go source code
- ineffassign: Detect ineffectual assignments
- staticcheck: Advanced static analysis
- unused: Check for unused code

Fixes golangci-lint error: "all linters were disabled, but no one linter was enabled"

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,11 @@
 linters:
-  disable-all: true
+  enable:
+    - errcheck
+    - gosimple
+    - govet
+    - ineffassign
+    - staticcheck
+    - unused
 
 issues:
   exclude-use-default: false
