--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,18 +1,12 @@
 linters:
   enable:
-    - errcheck
     - gosimple
     - govet
     - ineffassign
     - unused
-  # TODO: Re-enable staticcheck after fixing deprecation warnings
-  # staticcheck currently reports 30+ issues including:
-  # - io/ioutil deprecations (use io/os instead)
-  # - grpc.DialContext deprecation (use NewClient)
-  # - Empty branches (SA9003)
-  # - Identical expressions (SA4000)
-  # - Unused variables (SA4006)
-  # - Deprecated lipgloss methods (SA1019)
+  # TODO: Re-enable these linters after fixing code issues:
+  # - staticcheck: 30+ deprecation warnings (io/ioutil, grpc.DialContext, etc)
+  # - errcheck: 20+ unchecked error returns (os.Remove, Close, Setenv, Unsetenv)
 
 issues:
   exclude-use-default: false
