--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
 
     - name: Run integration tests (Linux only)
       if: runner.os == 'Linux'
+      env:
+        OPENAI_API_KEY: sk-test-dummy-key-for-ci
       run: make test-integration
 
   coverage:
