feat(otel): Add OpenTelemetry distributed tracing integration
- Initialize OTEL telemetry service in main.go with config/env support
- Add comprehensive nil safety tests for telemetry service
- Create integration tests verifying Jaeger export functionality
- Add docker-compose.otel.yml for local Jaeger testing
- Implement SetTelemetryService() method for engine configuration
- Add Makefile targets for OTEL testing (jaeger, test-otel, verify-otel-traces)
- Document OTEL implementation plan and status

Testing:
- All nil safety tests passing
- Integration tests verify spans export to Jaeger
- Tested with AWS cost spike analyzer agent (7 MCP servers, 41 tools)
- Captures both Station custom spans and GenKit native spans

Traces captured:
- GenKit: generate, openai/gpt-4o-mini, executable-prompt spans
- Station: db.agent_runs.*, mcp.server.start, mcp.client.* spans
- MCP Tools: AWS Cost Explorer tool calls as GenKit actions
- Complete trace hierarchies with parent-child relationships

Configuration:
- Set OTEL_EXPORTER_OTLP_ENDPOINT environment variable
- Or configure otel_endpoint in config.yaml
- Graceful degradation if not configured

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# ========================================
+# Repository Size Policy
+# ========================================
+# This repository enforces a 1MB file size limit to prevent bloat.
+#
+# History: In Nov 2024, we cleaned the repo from 240MB to 26MB by removing
+# accidentally committed node_modules (docs/site/node_modules/).
+#
+# Enforcement:
+# - Pre-commit hook blocks files >1MB locally (.git/hooks/pre-commit)
+# - GitHub Actions check blocks large files in PRs
+#
+# If you need to commit large files:
+# - Use .gitignore for build artifacts (node_modules, binaries, etc.)
+# - Use Git LFS for binary assets (images, videos, datasets)
+# - Host externally for very large files (S3, CDN, package registries)
+#
+# To bypass the pre-commit hook (NOT recommended):
+# git commit --no-verify
+# ========================================
+
 # Binaries for programs and plugins - NEVER commit binaries to git
 *.exe
 *.exe~
