--- a/examples/zero-config-deploy/.env.example
+++ b/examples/zero-config-deploy/.env.example
@@ -1,21 +1,16 @@
-# AI Provider Configuration (required - choose one)
+# Required: AI Provider API Key (choose one)
 OPENAI_API_KEY=sk-your-openai-key-here
-# ANTHROPIC_API_KEY=sk-ant-your-anthropic-key-here
-# GOOGLE_API_KEY=your-google-api-key-here
+# ANTHROPIC_API_KEY=sk-ant-your-key-here
+# GOOGLE_API_KEY=your-google-key-here
 
-# AWS Configuration (if using AWS MCP servers)
-AWS_ACCESS_KEY_ID=your-aws-access-key-id
-AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
-AWS_REGION=us-east-1
+# Optional: AWS Credentials (for AWS MCP servers)
+# AWS_ACCESS_KEY_ID=AKIA...
+# AWS_SECRET_ACCESS_KEY=...
+# AWS_REGION=us-east-1
 
-# E2B Configuration (if using E2B for code execution)
-E2B_API_KEY=your-e2b-api-key
+# Optional: E2B Code Execution
+# E2B_API_KEY=your-e2b-key
 
-# CloudShip Configuration (optional)
-STN_CLOUDSHIP_ENABLED=false
-STN_CLOUDSHIP_ENDPOINT=lighthouse.cloudshipai.com:50051
-STN_CLOUDSHIP_KEY=your-cloudship-key
-STN_CLOUDSHIP_STATION_ID=your-station-id
-
-# Station Encryption Key (auto-generated if not provided)
-# STATION_ENCRYPTION_KEY=your-custom-encryption-key
+# Optional: CloudShip Integration
+# STN_CLOUDSHIP_ENABLED=true
+# STN_CLOUDSHIP_KEY=your-cloudship-key
