--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -2,8 +2,9 @@
   "$schema": "https://opencode.ai/config.json",
   "mcp": {
     "station": {
+      "enabled": false,
       "type": "local",
-      "command": ["stn", "stdio", "@modelcontextprotocol/server-everything"],
+      "command": ["stn", "stdio"],
         "environment": {
         "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4318"
       }
