feat: Enable telemetry by default and simplify Jaeger service to pure Docker
Major improvements to telemetry and observability infrastructure:

**Telemetry Enabled by Default:**
- stn init now sets telemetry_enabled=true and otel_endpoint=http://localhost:4318
- stn stdio runs Jaeger by default for immediate trace visibility
- stn serve requires --jaeger flag (disabled by default for production)
- Developers get telemetry out-of-box without manual configuration

**Jaeger Service Simplification:**
- Removed Dagger dependency completely, now uses Docker CLI directly
- Fixed volume permissions (UID 10001 for Jaeger user)
- Created persistent jaeger-badger-data volume for trace storage
- Improved clean command to stop container and delete volume
- Faster startup with proper async initialization
- More reliable shutdown handling

**Multi-Agent Hierarchy Support:**
- Added child_agents field to agents API response
- Enables UI to visualize agent hierarchies and relationships
- Supports multi-agent deployment analysis workflows

**Database Migration Organization:**
- Moved migrations to internal/db/migrations/ for consistency
- Fixed goose Up/Down annotations in migrations 031-035
- Supports agent hierarchies, faker tool cache, reports, and benchmarks

**Code Cleanup:**
- Removed backup files (mcp_faker.go.backup, .bak2)
- Updated .gitignore for dev-workspace artifacts
- Improved faker logging and debug output

This enables production-ready observability with zero configuration for developers
while maintaining flexibility for production deployments.

--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,12 @@ station-mcp.json
 test-*.sh
 test_*.sh
 
+# Backup files from editors and manual edits
+*.bak
+*.bak2
+*.backup
+*~
+
 # Development workspace for temporary artifacts
 dev-workspace/
 temp/
