--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -2,7 +2,7 @@
   "$schema": "https://opencode.ai/config.json",
   "mcp": {
     "station": {
-      "enabled": false,
+      "enabled": true,
       "type": "local",
       "command": ["stn", "stdio"],
         "environment": {
