Fix Fly.io deployment path and build system refactor
Major improvements to build and deployment system:

Build System Refactor (DRY):
- Create pkg/builder/docker_builder.go for shared Docker building
- Refactor deploy.go to use shared builder (eliminate duplication)
- Add stn build env --skip-sync for fast deployment builds (0.1s)
- Update build.go with two-mode documentation (fast vs full builds)

Fly.io Deployment Fixes:
- Fix file paths from /root to /home/station (production runs as station user)
- Add --chown=station:station to COPY for proper ownership
- Create minimal config.yaml in container during build
- Set correct environment variables (STATION_MCP_PORT=8586, etc)
- Fix deploy.go MCPPort from hardcoded 3031 to 8586
- Fix fly.toml to route to MCP port (8586) instead of API port
- Fix volume mount from /root/.config/station to /data

Server Improvements:
- Make API server optional via STN_DEV_MODE env var
- Production deployments disable port 8585 by default (security)
- API/UI only enabled when STN_DEV_MODE=true

Results:
- Container builds successfully (0.1s build time)
- Container starts and stays running
- File ownership correct (station:station)
- Config files present and valid

Known Issue:
- stn serve process runs but doesn't bind to ports 8585/8586
- Investigation needed for why servers aren't listening
- May be application startup issue vs deployment issue

--- a/internal/deployment/templates/fly.toml
+++ b/internal/deployment/templates/fly.toml
@@ -20,7 +20,7 @@ primary_region = "{{.FlyRegion}}"
 {{end}}
 
 [http_service]
-  internal_port = {{.APIPort}}
+  internal_port = {{.MCPPort}}
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
@@ -43,7 +43,7 @@ primary_region = "{{.FlyRegion}}"
 
 [[mounts]]
   source = "station_data"
-  destination = "/root/.config/station"
+  destination = "/data"
 
 # Deployment instructions:
 #
