fix: Dynamic Agent MCP port and enable sync on Fly.io startup
- Change Dynamic Agent MCP from hardcoded port 3030 to cfg.MCPPort+1 (8587)
- Remove STATION_SKIP_SYNC_ON_STARTUP from deployment secrets to allow sync on first boot
- Update fly.toml to expose Dynamic Agent MCP on correct port 8587
- Fixes agent loading issue where 0 agents appeared in Dynamic Agent MCP

--- a/internal/deployment/templates/fly.toml
+++ b/internal/deployment/templates/fly.toml
@@ -19,6 +19,7 @@ primary_region = "{{.FlyRegion}}"
   {{$key}} = "{{$value}}"
 {{end}}
 
+# Management MCP on port 8586 (admin tools)
 [http_service]
   internal_port = {{.MCPPort}}
   force_https = true
@@ -27,6 +28,18 @@ primary_region = "{{.FlyRegion}}"
   min_machines_running = 0
   processes = ["app"]
 
+# Dynamic Agent MCP TCP service (agents as tools)
+# Port is MCPPort + 1 (e.g., 8586 + 1 = 8587)
+[[services]]
+  protocol = "tcp"
+  internal_port = 8587
+  auto_stop_machines = true
+  auto_start_machines = true
+
+  [[services.ports]]
+    port = 8587
+
+# Management MCP TCP service  
 [[services]]
   protocol = "tcp"
   internal_port = {{.MCPPort}}
