Configure OpenCode to use station-demo workspace
- Added --config flag pointing to station-demo/config.yaml
- Enables OpenCode to work with Git-backed Station workspace
- All agent operations will use production environment from Git repo

--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -4,10 +4,15 @@
     "station": {
       "enabled": true,
       "type": "local",
-      "command": ["stn", "stdio"],
-        "environment": {
+      "command": [
+        "stn",
+        "--config",
+        "/home/epuerta/projects/hack/station/station-demo/config.yaml",
+        "stdio"
+      ],
+      "environment": {
         "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4318"
       }
-    },
-  },
+    }
+  }
 }
