--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "https://opencode.ai/config.json",
   "mcp": {
-    "station": {
+    "opencode-station": {
       "enabled": true,
       "type": "local",
       "command": [
