feat(ui): polish agents page - add schedule functionality and clean up UI
- Add Schedule section to AgentDetailsPanel with working modal integration
- Wire up AgentScheduleModal to Set Schedule button
- Remove duplicate Run Agent button from details panel header
- Fix View All Runs button to navigate to /runs page
- Import Calendar icon and useNavigate for navigation
- Pass onScheduleAgent callback through component hierarchy
- Test all interactions with Playwright (schedule modal, runs navigation)

All functionality verified working correctly.

--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -13,6 +13,11 @@
       "environment": {
         "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4318"
       }
-    }
+    },
+    "playwright": {
+      "enabled": true,
+      "type": "local",
+      "command": ["npx", "@playwright/mcp@latest"]
+    },
   }
 }
