fix: Docker volume permissions and remove GEMINI_API_KEY requirement
- Fix SQLite 'out of memory (14)' error on fresh Docker volumes
  - Add /data directory ownership fix to Docker entrypoint
  - Container starts as root, fixes permissions, drops to uid 1000
  - Prevents permission denied errors on database file creation

- Remove GEMINI_API_KEY requirement when using OpenAI provider
  - Implement lazy initialization in BenchmarkService
  - Service only initializes when actually used
  - Station now starts with only OPENAI_API_KEY configured

Affects: Dockerfile, Dockerfile.local, benchmark_service.go
Impact: Fixes critical deployment blocker for Docker/ECS/Kubernetes

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -82,6 +82,9 @@ if [ "$(id -u)" = "0" ]; then\n\
     if [ -d /workspace ]; then\n\
         chown station:station /workspace 2>/dev/null || true\n\
     fi\n\
+    if [ -d /data ]; then\n\
+        chown -R station:station /data 2>/dev/null || true\n\
+    fi\n\
     export HOME=/home/station\n\
     export USER=station\n\
     exec gosu station "$@"\n\
