fix: production deployment volume permissions and port configuration
- Add dynamic agent MCP port (8587) to K8s manifests
- Fix volume permission issues in production Dockerfile
- Implement su-exec pattern for proper user switching
- Container now starts as root, fixes permissions, switches to station user
- Removes need for user: 0:0 workaround in docker-compose

--- a/deployments/kubernetes/deployment.yaml
+++ b/deployments/kubernetes/deployment.yaml
@@ -31,6 +31,9 @@ spec:
         - name: mcp
           containerPort: 8586
           protocol: TCP
+        - name: dynamic-mcp
+          containerPort: 8587
+          protocol: TCP
         
         env:
         # ConfigMap values
