--- a/deployments/kubernetes/service.yaml
+++ b/deployments/kubernetes/service.yaml
@@ -18,6 +18,10 @@ spec:
     port: 8586
     targetPort: 8586
     protocol: TCP
+  - name: dynamic-mcp
+    port: 8587
+    targetPort: 8587
+    protocol: TCP
 ---
 # Optional: LoadBalancer service for external access
 apiVersion: v1
@@ -39,4 +43,8 @@ spec:
   - name: mcp
     port: 8586
     targetPort: 8586
+    protocol: TCP
+  - name: dynamic-mcp
+    port: 8587
+    targetPort: 8587
     protocol: TCP
