--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: ["1.21", "1.22"]
+        go-version: ["1.24"]
     runs-on: ubuntu-latest
     
     steps:
