--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -2,7 +2,7 @@
   "$schema": "https://opencode.ai/config.json",
   "mcp": {
     "opencode-station": {
-      "enabled": true,
+      "enabled": false,
       "type": "local",
       "command": [
         "stn",
